Fix the bug where the "InterfaceTabs" component wasn't showing up on mobile devices.

--- a/src/features/weatherInfo/_weatherInformation.scss
+++ b/src/features/weatherInfo/_weatherInformation.scss
@@ -1,8 +1,10 @@
 #weather-info {
 
-  height: 100%;
+  height: calc(100% - 7.5%);
   flex-basis: 100%;
   display: none;
+  position: relative;
+  bottom: 0;
 
 
 
@@ -21,6 +23,7 @@
     section {
 
       background: transparent;
+      height: 65%;
 
     }
 
